--- a/app/globals.css
+++ b/app/globals.css
@@ -3,31 +3,57 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+    --color-primary: #225378;
+    --color-secondary: #c0779d;
+    /* orange */
+    /*--color-secondary: #e56108;*/
+    --color-tertiary: #ffffff;
+
+    color: var(--color-primary);
+    background: #fff;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+.text-primary {
+    color: var(--color-primary);
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.text-secondary {
+    color: var(--color-secondary);
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+.text-tertiary {
+    color: var(--color-tertiary);
 }
+
+.b-primary {
+    border-color: var(--color-primary);;
+}
+
+.b-secondary {
+    border-color: var(--color-secondary);
+}
+
+.b-tertiary {
+    border-color: var(--color-tertiary);
+}
+
+.bg-primary {
+    background-color: var(--color-primary);;
+}
+
+.bg-secondary {
+    background-color: var(--color-secondary);
+}
+
+.bg-tertiary {
+    background-color: var(--color-tertiary);
+}
+
+.--no-scroll {
+    overflow: hidden;
+}
+
+a, button:not([disabled]):focus {
+
+}
+
