--- a/app/globals.css
+++ b/app/globals.css
@@ -14,15 +14,15 @@
     color: var(--color-tertiary);
 }
 
-.b-primary {
+.border-primary {
     border-color: var(--color-primary);;
 }
 
-.b-secondary {
+.border-secondary {
     border-color: var(--color-secondary);
 }
 
-.b-tertiary {
+.border-tertiary {
     border-color: var(--color-tertiary);
 }
 
@@ -36,6 +36,18 @@
 
 .bg-tertiary {
     background-color: var(--color-tertiary);
+}
+
+.fill-primary {
+    fill: var(--color-primary);;
+}
+
+.fill-secondary {
+    fill: var(--color-secondary);
+}
+
+.fill-tertiary {
+    fill: var(--color-tertiary);
 }
 
 :root {
