chore: imports and naming change

--- a/app/globals.css
+++ b/app/globals.css
@@ -60,14 +60,13 @@
     --color-tertiary: #ffffff;
     --color-light-gray: #ebf3f9;
 
-    --sizing-min-width: "320px";
-    --sizing-max-width: "1200px";
-
-    color: var(--color-primary);
-    background: #fff;
+    --sizing-min-width: 320px;
+    --sizing-max-width: 1200px;
 }
 
 body {
+    color: var(--color-primary);
+    background: #fff;
     min-width: var(--sizing-min-width);
     max-width: var(--sizing-max-width);
     margin: auto;
