--- a/app/globals.css
+++ b/app/globals.css
@@ -14,7 +14,7 @@
 body {
     color: var(--color-primary);
     min-width: var(--sizing-min-width);
-    /*max-width: var(--sizing-max-width);*/
+    max-width: var(--sizing-max-width);
     margin: auto;
 }
 
